page header flag wrap fix

--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -155,7 +155,7 @@
       order: 1;
     }
     button {
-      width: 200px;
+      width: 164px;
       max-width: 100%;
       background: none;
       white-space: nowrap;
